# rag-system-newpage

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  ruff.toml
src/: app.py
src/rag/: __init__.py  chunking.py  config.py  loaders.py  store.py  system.py
tests/: test_chunking.py  test_loaders.py  test_rag_system.py  test_store.py
vector_store/: chunks.jsonl  index.faiss
